Rename to Nova Nexus Capital, fix footer spacing, fix button width

--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contacto — Nova Nexus | Agenda una Consulta</title>
-  <meta name="description" content="Agenda una conversación sin compromiso con Nova Nexus. Descubre cómo podemos conectar tu industria con la mejor tecnología global.">
-  <meta name="author" content="Nova Nexus">
+  <title>Contacto — Nova Nexus Capital | Agenda una Consulta</title>
+  <meta name="description" content="Agenda una conversación sin compromiso con Nova Nexus Capital. Descubre cómo podemos conectar tu industria con la mejor tecnología global.">
+  <meta name="author" content="Nova Nexus Capital">
   <meta name="robots" content="index, follow">
   <meta name="theme-color" content="#0F112A">
   <link rel="canonical" href="https://novanexuscapital.com/contact.html">
@@ -17,9 +17,9 @@
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
-  <meta property="og:site_name" content="Nova Nexus">
-  <meta property="og:title" content="Contacto — Nova Nexus | Agenda una Consulta">
-  <meta property="og:description" content="Agenda una conversación sin compromiso con Nova Nexus. Descubre cómo podemos conectar tu industria con la mejor tecnología global.">
+  <meta property="og:site_name" content="Nova Nexus Capital">
+  <meta property="og:title" content="Contacto — Nova Nexus Capital | Agenda una Consulta">
+  <meta property="og:description" content="Agenda una conversación sin compromiso con Nova Nexus Capital. Descubre cómo podemos conectar tu industria con la mejor tecnología global.">
   <meta property="og:url" content="https://novanexuscapital.com/contact.html">
   <meta property="og:image" content="https://novanexuscapital.com/images/hero-nexus.png">
   <meta property="og:image:width" content="1034">
@@ -28,7 +28,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Contacto — Nova Nexus | Agenda una Consulta">
+  <meta name="twitter:title" content="Contacto — Nova Nexus Capital | Agenda una Consulta">
   <meta name="twitter:description" content="Agenda una conversación sin compromiso. Descubre cómo conectar tu industria con la mejor tecnología global.">
   <meta name="twitter:image" content="https://novanexuscapital.com/images/hero-nexus.png">
 
@@ -43,11 +43,11 @@
   {
     "@context": "https://schema.org",
     "@type": "ContactPage",
-    "name": "Contacto — Nova Nexus",
+    "name": "Contacto — Nova Nexus Capital",
     "url": "https://novanexuscapital.com/contact.html",
     "mainEntity": {
       "@type": "Organization",
-      "name": "Nova Nexus",
+      "name": "Nova Nexus Capital",
       "url": "https://novanexuscapital.com",
       "email": "contact@novanexuscapital.com",
       "address": {
