--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nova Nexus — Facilitamos la Adopción de Tecnología de Clase Mundial</title>
+  <title>Nova Nexus Capital — Facilitamos la Adopción de Tecnología de Clase Mundial</title>
   <meta name="description" content="Facilitamos la adopción de tecnología de clase mundial en industrias estratégicas. Consultoría tecnológica con acompañamiento cercano, desde evaluación hasta puesta en marcha.">
   <meta name="keywords" content="consultoría tecnológica, adopción tecnológica, fraud detection, fintech, compliance, modernización digital, Oscilar">
-  <meta name="author" content="Nova Nexus">
+  <meta name="author" content="Nova Nexus Capital">
   <meta name="robots" content="index, follow">
   <meta name="theme-color" content="#2B40F5">
   <link rel="canonical" href="https://novanexuscapital.com/">
@@ -18,8 +18,8 @@
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
-  <meta property="og:site_name" content="Nova Nexus">
-  <meta property="og:title" content="Nova Nexus — Facilitamos la Adopción de Tecnología de Clase Mundial">
+  <meta property="og:site_name" content="Nova Nexus Capital">
+  <meta property="og:title" content="Nova Nexus Capital — Facilitamos la Adopción de Tecnología de Clase Mundial">
   <meta property="og:description" content="Facilitamos la adopción de tecnología de clase mundial en industrias estratégicas. Consultoría tecnológica con acompañamiento cercano.">
   <meta property="og:url" content="https://novanexuscapital.com/">
   <meta property="og:image" content="https://novanexuscapital.com/images/hero-nexus.png">
@@ -29,7 +29,7 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Nova Nexus — Facilitamos la Adopción de Tecnología de Clase Mundial">
+  <meta name="twitter:title" content="Nova Nexus Capital — Facilitamos la Adopción de Tecnología de Clase Mundial">
   <meta name="twitter:description" content="Facilitamos la adopción de tecnología de clase mundial en industrias estratégicas.">
   <meta name="twitter:image" content="https://novanexuscapital.com/images/hero-nexus.png">
 
@@ -44,7 +44,7 @@
   {
     "@context": "https://schema.org",
     "@type": "Organization",
-    "name": "Nova Nexus",
+    "name": "Nova Nexus Capital",
     "url": "https://novanexuscapital.com",
     "logo": "https://novanexuscapital.com/images/logo.svg",
     "description": "Facilitamos la adopción de tecnología de clase mundial en industrias estratégicas.",
@@ -85,7 +85,7 @@
           </div>
         </div>
         <div class="hero__visual">
-          <img src="images/hero-nexus.png" alt="Nova Nexus molecular network visual">
+          <img src="images/hero-nexus.png" alt="Nova Nexus Capital molecular network visual">
         </div>
       </div>
     </div>
@@ -367,7 +367,7 @@
     <div class="comparison__inner">
       <div style="width:100%;">
         <nova-tag variant="blue" center>COMPARACIÓN</nova-tag>
-        <h2 class="h2 h2--center">¿Por qué trabajar con Nova Nexus?</h2>
+        <h2 class="h2 h2--center">¿Por qué trabajar con Nova Nexus Capital?</h2>
       </div>
       <div class="comparison__cards">
         <div class="comparison__card">
@@ -417,7 +417,7 @@
           </div>
         </div>
         <div class="comparison__card comparison__card--highlight">
-          <h3 class="comparison__card-title">Con Nova Nexus</h3>
+          <h3 class="comparison__card-title">Con Nova Nexus Capital</h3>
           <div class="comparison__items">
             <div class="comparison__item">
               <span class="check-icon check-icon--blue" style="background:var(--lavender);">
@@ -523,7 +523,7 @@
           <nova-faq question="¿Qué soporte ofrecen post-implementación?">Todos los planes incluyen soporte técnico dedicado con un Account Manager asignado. Ofrecemos monitoreo proactivo 24/7, actualizaciones automáticas del sistema, y sesiones de optimización trimestrales para asegurar que estés aprovechando al máximo la plataforma.</nova-faq>
           <nova-faq question="¿Cómo se compara Oscilar con otras soluciones?">Oscilar se diferencia por su enfoque en inteligencia artificial adaptativa que aprende de los patrones específicos de cada negocio. A diferencia de soluciones genéricas, sus modelos se entrenan con datos específicos de cada cliente para ofrecer una precisión significativamente mayor y reducir falsos positivos.</nova-faq>
           <nova-faq question="¿Qué pasa si ya tenemos un proveedor de fraud detection?">Nuestra plataforma está diseñada para integrarse con tu stack tecnológico actual. Podemos funcionar como una capa complementaria a tu solución existente o como un reemplazo completo. Durante la fase de diagnóstico evaluamos tu infraestructura y recomendamos el mejor approach de integración.</nova-faq>
-          <nova-faq question="¿Nova Nexus es exclusivo de Oscilar o tienen otros partners?">Nova Nexus trabaja con partners tecnológicos seleccionados. Actualmente, Oscilar es nuestro partner principal para gestión de riesgo y compliance en el mercado latinoamericano. Nuestra visión es expandir el portafolio con soluciones complementarias para distintas industrias estratégicas.</nova-faq>
+          <nova-faq question="¿Nova Nexus Capital es exclusivo de Oscilar o tienen otros partners?">Nova Nexus Capital trabaja con partners tecnológicos seleccionados. Actualmente, Oscilar es nuestro partner principal para gestión de riesgo y compliance en el mercado latinoamericano. Nuestra visión es expandir el portafolio con soluciones complementarias para distintas industrias estratégicas.</nova-faq>
         </div>
       </div>
     </div>
