--- a/privacy.html
+++ b/privacy.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Política de Privacidad — Nova Nexus</title>
-  <meta name="description" content="Conoce cómo Nova Nexus recopila, usa y protege tus datos personales. Política de privacidad conforme a la legislación chilena.">
-  <meta name="author" content="Nova Nexus">
+  <title>Política de Privacidad — Nova Nexus Capital</title>
+  <meta name="description" content="Conoce cómo Nova Nexus Capital recopila, usa y protege tus datos personales. Política de privacidad conforme a la legislación chilena.">
+  <meta name="author" content="Nova Nexus Capital">
   <meta name="robots" content="index, follow">
   <meta name="theme-color" content="#0F112A">
   <link rel="canonical" href="https://novanexuscapital.com/privacy.html">
@@ -17,9 +17,9 @@
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
-  <meta property="og:site_name" content="Nova Nexus">
-  <meta property="og:title" content="Política de Privacidad — Nova Nexus">
-  <meta property="og:description" content="Conoce cómo Nova Nexus recopila, usa y protege tus datos personales.">
+  <meta property="og:site_name" content="Nova Nexus Capital">
+  <meta property="og:title" content="Política de Privacidad — Nova Nexus Capital">
+  <meta property="og:description" content="Conoce cómo Nova Nexus Capital recopila, usa y protege tus datos personales.">
   <meta property="og:url" content="https://novanexuscapital.com/privacy.html">
   <meta property="og:image" content="https://novanexuscapital.com/images/hero-nexus.png">
   <meta property="og:image:width" content="1034">
@@ -28,8 +28,8 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Política de Privacidad — Nova Nexus">
-  <meta name="twitter:description" content="Conoce cómo Nova Nexus recopila, usa y protege tus datos personales.">
+  <meta name="twitter:title" content="Política de Privacidad — Nova Nexus Capital">
+  <meta name="twitter:description" content="Conoce cómo Nova Nexus Capital recopila, usa y protege tus datos personales.">
   <meta name="twitter:image" content="https://novanexuscapital.com/images/hero-nexus.png">
 
   <!-- Fonts -->
@@ -60,7 +60,7 @@
     <div class="legal-content__inner">
 
       <h2>1. Introducción</h2>
-      <p>Nova Nexus (&ldquo;nosotros&rdquo;, &ldquo;nuestro&rdquo;) es una empresa de consultoría tecnológica con sede en Santiago, Chile. Esta Política de Privacidad describe cómo recopilamos, usamos y protegemos la información personal que nos proporcionas a través de nuestro sitio web.</p>
+      <p>Nova Nexus Capital (&ldquo;nosotros&rdquo;, &ldquo;nuestro&rdquo;) es una empresa de consultoría tecnológica con sede en Santiago, Chile. Esta Política de Privacidad describe cómo recopilamos, usamos y protegemos la información personal que nos proporcionas a través de nuestro sitio web.</p>
       <p>Al utilizar nuestro sitio, aceptas las prácticas descritas en esta política. Si no estás de acuerdo, te pedimos que no utilices nuestros servicios en línea.</p>
 
       <h2>2. Datos que Recopilamos</h2>
