--- a/terms.html
+++ b/terms.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Términos de Servicio — Nova Nexus</title>
-  <meta name="description" content="Términos y condiciones de uso del sitio web de Nova Nexus. Conoce tus derechos y responsabilidades al utilizar nuestros servicios.">
-  <meta name="author" content="Nova Nexus">
+  <title>Términos de Servicio — Nova Nexus Capital</title>
+  <meta name="description" content="Términos y condiciones de uso del sitio web de Nova Nexus Capital. Conoce tus derechos y responsabilidades al utilizar nuestros servicios.">
+  <meta name="author" content="Nova Nexus Capital">
   <meta name="robots" content="index, follow">
   <meta name="theme-color" content="#0F112A">
   <link rel="canonical" href="https://novanexuscapital.com/terms.html">
@@ -17,9 +17,9 @@
 
   <!-- Open Graph -->
   <meta property="og:type" content="website">
-  <meta property="og:site_name" content="Nova Nexus">
-  <meta property="og:title" content="Términos de Servicio — Nova Nexus">
-  <meta property="og:description" content="Términos y condiciones de uso del sitio web de Nova Nexus.">
+  <meta property="og:site_name" content="Nova Nexus Capital">
+  <meta property="og:title" content="Términos de Servicio — Nova Nexus Capital">
+  <meta property="og:description" content="Términos y condiciones de uso del sitio web de Nova Nexus Capital.">
   <meta property="og:url" content="https://novanexuscapital.com/terms.html">
   <meta property="og:image" content="https://novanexuscapital.com/images/hero-nexus.png">
   <meta property="og:image:width" content="1034">
@@ -28,8 +28,8 @@
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Términos de Servicio — Nova Nexus">
-  <meta name="twitter:description" content="Términos y condiciones de uso del sitio web de Nova Nexus.">
+  <meta name="twitter:title" content="Términos de Servicio — Nova Nexus Capital">
+  <meta name="twitter:description" content="Términos y condiciones de uso del sitio web de Nova Nexus Capital.">
   <meta name="twitter:image" content="https://novanexuscapital.com/images/hero-nexus.png">
 
   <!-- Fonts -->
@@ -60,10 +60,10 @@
     <div class="legal-content__inner">
 
       <h2>1. Aceptación de los Términos</h2>
-      <p>Al acceder y utilizar el sitio web de Nova Nexus, aceptas cumplir con estos Términos de Servicio y todas las leyes y regulaciones aplicables. Si no estás de acuerdo con alguno de estos términos, te pedimos que no utilices nuestro sitio.</p>
+      <p>Al acceder y utilizar el sitio web de Nova Nexus Capital, aceptas cumplir con estos Términos de Servicio y todas las leyes y regulaciones aplicables. Si no estás de acuerdo con alguno de estos términos, te pedimos que no utilices nuestro sitio.</p>
 
       <h2>2. Descripción del Servicio</h2>
-      <p>Nova Nexus es una empresa de consultoría tecnológica que facilita la adopción de tecnología de clase mundial en industrias estratégicas. Este sitio web tiene carácter informativo y de contacto, presentando nuestros servicios, enfoque y formas de comunicación.</p>
+      <p>Nova Nexus Capital es una empresa de consultoría tecnológica que facilita la adopción de tecnología de clase mundial en industrias estratégicas. Este sitio web tiene carácter informativo y de contacto, presentando nuestros servicios, enfoque y formas de comunicación.</p>
       <p>La información publicada en este sitio no constituye una oferta vinculante de servicios profesionales. Las condiciones específicas de cualquier servicio serán acordadas por separado mediante contrato.</p>
 
       <h2>3. Uso Aceptable</h2>
@@ -79,16 +79,16 @@
       <p>Nos reservamos el derecho de restringir el acceso al sitio a cualquier usuario que incumpla estas condiciones.</p>
 
       <h2>4. Propiedad Intelectual</h2>
-      <p>Todo el contenido de este sitio web, incluyendo pero no limitado a textos, gráficos, logotipos, imágenes, diseños, código fuente e identidad visual, es propiedad de Nova Nexus o de sus respectivos licenciantes y está protegido por las leyes de propiedad intelectual de Chile y tratados internacionales.</p>
-      <p>Queda prohibida la reproducción, distribución, modificación o uso comercial de cualquier contenido del sitio sin autorización previa y por escrito de Nova Nexus.</p>
+      <p>Todo el contenido de este sitio web, incluyendo pero no limitado a textos, gráficos, logotipos, imágenes, diseños, código fuente e identidad visual, es propiedad de Nova Nexus Capital o de sus respectivos licenciantes y está protegido por las leyes de propiedad intelectual de Chile y tratados internacionales.</p>
+      <p>Queda prohibida la reproducción, distribución, modificación o uso comercial de cualquier contenido del sitio sin autorización previa y por escrito de Nova Nexus Capital.</p>
 
       <h2>5. Enlaces Externos</h2>
-      <p>Nuestro sitio puede contener enlaces a sitios web de terceros. Estos enlaces se proporcionan únicamente para tu conveniencia y no implican respaldo, aprobación o responsabilidad por parte de Nova Nexus respecto al contenido, políticas o prácticas de dichos sitios.</p>
+      <p>Nuestro sitio puede contener enlaces a sitios web de terceros. Estos enlaces se proporcionan únicamente para tu conveniencia y no implican respaldo, aprobación o responsabilidad por parte de Nova Nexus Capital respecto al contenido, políticas o prácticas de dichos sitios.</p>
       <p>Te recomendamos revisar los términos y políticas de privacidad de cualquier sitio externo que visites.</p>
 
       <h2>6. Limitación de Responsabilidad</h2>
       <p>La información y los materiales publicados en este sitio se proporcionan &ldquo;tal cual&rdquo; y &ldquo;según disponibilidad&rdquo;, sin garantías de ningún tipo, ya sean expresas o implícitas.</p>
-      <p>Nova Nexus no será responsable por:</p>
+      <p>Nova Nexus Capital no será responsable por:</p>
       <ul>
         <li>Errores u omisiones en el contenido del sitio.</li>
         <li>Interrupciones o fallos en el funcionamiento del sitio.</li>
@@ -97,7 +97,7 @@
       </ul>
 
       <h2>7. Indemnización</h2>
-      <p>Aceptas indemnizar y mantener indemne a Nova Nexus, sus directores, empleados y colaboradores, frente a cualquier reclamación, pérdida, daño, costo o gasto (incluyendo honorarios de abogados) que surja del uso indebido del sitio o del incumplimiento de estos Términos de Servicio.</p>
+      <p>Aceptas indemnizar y mantener indemne a Nova Nexus Capital, sus directores, empleados y colaboradores, frente a cualquier reclamación, pérdida, daño, costo o gasto (incluyendo honorarios de abogados) que surja del uso indebido del sitio o del incumplimiento de estos Términos de Servicio.</p>
 
       <h2>8. Ley Aplicable y Jurisdicción</h2>
       <p>Estos Términos de Servicio se regirán e interpretarán de acuerdo con las leyes de la República de Chile. Cualquier controversia derivada de estos términos o del uso del sitio web será sometida a la jurisdicción de los tribunales ordinarios de Santiago de Chile, renunciando las partes a cualquier otro fuero que pudiera corresponderles.</p>
@@ -110,7 +110,7 @@
       </ul>
 
       <h2>10. Modificaciones</h2>
-      <p>Nova Nexus se reserva el derecho de modificar estos Términos de Servicio en cualquier momento y sin previo aviso. Los cambios entrarán en vigencia desde su publicación en esta página. El uso continuado del sitio después de cualquier modificación constituye la aceptación de los nuevos términos.</p>
+      <p>Nova Nexus Capital se reserva el derecho de modificar estos Términos de Servicio en cualquier momento y sin previo aviso. Los cambios entrarán en vigencia desde su publicación en esta página. El uso continuado del sitio después de cualquier modificación constituye la aceptación de los nuevos términos.</p>
       <p>Te recomendamos revisar esta página periódicamente para estar al tanto de posibles cambios.</p>
 
     </div>
